# BAKK_Prodanovic_Zaric_OBD

./: .gitignore  99-usb-serial.rules  DTCs.ods  DeviceInformation.txt  README.md  commandtocompile  ubuntuAptGetInstalls.sh  usb-vhci-hcd.ko  usb-vhci-iocifc.ko
OBDCU/: .cproject  .project  CMakeLists.txt  cmake_modules  install.sh
OBDCU/cfg/: databaseconfiguration.xml
OBDCU/src/: CMakeLists.txt  Main.cpp
OBDCU/src/Controller/: CMakeLists.txt  CommunicationController.cpp  CommunicationController.h  OBDCommandController.cpp  OBDCommandController.h  OBDController.cpp  OBDController.h  maincontroller.cpp  maincontroller.h
OBDCU/src/Model/: CMakeLists.txt  ObdcuXmlHandler.cpp  ObdcuXmlHandler.h
OBDCU/src/View/: CMakeLists.txt  MainView.cpp  View.pro  abstractobdwidget.cpp  abstractobdwidget.h  actionsidebar.cpp  actionsidebar.h  actionsidebar.ui  adddatabasedtcdialog.cpp  adddatabasedtcdialog.h  adddatabasedtcdialog.ui  communicationswidget.cpp  communicationswidget.h  communicationswidget.ui  databasewidget.cpp  databasewidget.h  databasewidget.ui  dtcwidget.cpp  dtcwidget.h  dtcwidget.ui  emulationwidget.cpp  emulationwidget.h  emulationwidget.ui  errorpage.cpp  errorpage.h  errorpage.ui  homewidget.cpp  homewidget.h  homewidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pictures.qrc  resources.qrc  sensorwidget.cpp  sensorwidget.h  sensorwidget.ui  settingswidget.cpp  settingswidget.h  (+6 more)
OBDCU/src/View/includes/: MainView.h
OBDCU/src/View/res/: style.qss
OBDCU/src/build-View-Desktop-Debug/: View  moc_communicationswidget.cpp  moc_databasewidget.cpp  moc_dtcwidget.cpp  moc_emulationwidget.cpp  moc_homewidget.cpp  moc_mainwindow.cpp  moc_sensorwidget.cpp  moc_settingswidget.cpp  ui_communicationswidget.h  ui_databasewidget.h  ui_dtcwidget.h  ui_emulationwidget.h  ui_homewidget.h  ui_mainwindow.h  ui_sensorwidget.h  ui_settingswidget.h
OBDMiddleware/: .cproject  .project  CMakeLists.txt
OBDMiddleware/cmake_modules/: CMakeLists.txt
OBDMiddleware/communicationInterface/: CMakeLists.txt
OBDMiddleware/communicationInterface/Testing/Temporary/: CTestCostData.txt
OBDMiddleware/communicationInterface/src/: Device.cpp  DeviceDetector.h  EmulatedDevice.cpp  EmulatedDevice.h  USBEmulationSupervisor.cpp  USBEmulationSupervisor.h  USBRequestHandler.cpp  USBRequestHandler.h  UartDevice.cpp
OBDMiddleware/communicationInterface/test/: TestMain.cpp  USBRequestHandlerTest.cpp  USBRequestHandlerTest.h
OBDMiddleware/configurations/: CMakeLists.txt
OBDMiddleware/configurations/src/: Configuration.cpp  Configuration.h  DatabaseXMLHandler.cpp  DatabaseXMLHandler.h  DefaultXMLHandler.cpp  DefaultXMLHandler.h  ElmCommandXMLHandler.cpp  ElmCommandXMLHandler.h  OBDCommandInputDefinitions.h  OBDCommandXMLHandler.cpp  OBDCommandXMLHandler.h  XMLReader.cpp  XMLReader.h  XMLWriter.cpp  XMLWriter.h
OBDMiddleware/configurations/test/: DatabaseXMLHandlerTest.cpp  DatabaseXMLHandlerTest.h  DefaultXMLHandlerTest.cpp  DefaultXMLHandlerTest.h  ElmCommandXMLHandlerTest.cpp  ElmCommandXMLHandlerTest.h  OBDCommandXMLHandlerTest.cpp  OBDCommandXMLHandlerTest.h  XMLReaderTest.cpp  XMLReaderTest.h
OBDMiddleware/configurations/test/testdata/: dbconfiguration.xml  obdcommand.xml
OBDMiddleware/databaseManagement/: CMakeLists.txt  OBD_TroubleCodes.sql
OBDMiddleware/databaseManagement/src/: Converter.cpp  Converter.h  DBExecuter.cpp  DBExecuter.h  DBInserter.h  DBRepresenter.cpp  DBRepresenter.h  SQLStatementFactory.cpp  SQLStatementFactory.h
OBDMiddleware/databaseManagement/test/: DBExecuterTest.cpp  DBExecuterTest.h  DBRepresenterTest.cpp  DBRepresenterTest.h
OBDMiddleware/databaseManagement/test/testdata/: configuration.xml  database.dtd  setupDatabases.sh  testdb.sql
OBDMiddleware/notes/: DBInserterTest.cpp  DBInserterTest.h
OBDMiddleware/obdBase/: CMakeLists.txt  OBD_TroubleCodes.sql
OBDMiddleware/obdBase/src/: AbstractOBDValue.cpp  AbstractOBDValue.h  BaseElmCommand.cpp  BaseElmCommand.h  Configuration.cpp  Configuration.h  DiagnosticTroubleCode.cpp  DiagnosticTroubleCode.h  ElmCommand.cpp  ElmCommand.h  ElmCommandFactory.cpp  ElmCommandFactory.h  OBDBitMappingValue.cpp  OBDBitMappingValue.h  OBDBitcombinationMappingValue.cpp  OBDBitcombinationMappingValue.h  OBDCalculationValue.cpp  OBDCalculationValue.h  OBDCommand.cpp  OBDCommand.h  OBDCommandValueFactory.cpp  OBDCommandValueFactory.h  OBDValueMappingValue.cpp  OBDValueMappingValue.h  ObdCommand.cpp  ObdCommand.h  SimpleElmCommand.cpp  SimpleElmCommand.h  ValueElmCommand.cpp  ValueElmCommand.h
OBDMiddleware/obdBase/test/: DiagnosticTroubleCodeTest.cpp  DiagnosticTroubleCodeTest.h  ElmCommandFactoryTest.cpp  ElmCommandFactoryTest.h  ElmCommandTest.cpp  ElmCommandTest.h  OBDBitMappingValueTest.cpp  OBDBitMappingValueTest.h  OBDBitcombinationMappingValueTest.cpp  OBDBitcombinationMappingValueTest.h  OBDCalculationValueTest.cpp  OBDCalculationValueTest.h  OBDValueMappingValueTest.cpp  OBDValueMappingValueTest.h  ObdCommandTest.cpp  ObdCommandTest.h  SimpleElmCommandTest.cpp  SimpleElmCommandTest.h  ValueElmCommandTest.cpp  ValueElmCommandTest.h
OBDMiddleware/obdBase/test/testdata/: database.dtd  elmcommand.dtd  (+4 more)
Sandbox/: .cproject  .project  CMakeLists.txt  usb stringdesciptor original device capture.pcapng
Sandbox/Debug/: makefile  sources.mk
Sandbox/Debug/src/: subdir.mk
Sandbox/Debug/test/: TestMain.d  UartDeviceTest.d  subdir.mk
Sandbox/backup/: Main.cpp
Sandbox/cmake_modules/: FindLibusbVHCI.cmake
Sandbox/src/: CMakeLists.txt  CMakeLists.txt~  Device.cpp  Device.h  DeviceDetector.cpp  DeviceDetector.h  EmulatedDevice.cpp  EmulatedDevice.h  Main.cpp  OBDCUMainWindow.ui  SerialCommunication.cpp  SerialCommunication.h  USBEmulationConstants.h  USBEmulationSupervisor.cpp  USBEmulationSupervisor.h  USBRequestHandler.cpp  USBRequestHandler.h  UartDevice.cpp  UartDevice.h  src.pro  uart.cpp  usbemulation
Sandbox/test/: CMakeLists.txt  UartDeviceTest.cpp  UartDeviceTest.h
Sandbox/test/example/: UartDeviceTest.cpp  UartDeviceTest.h
libs/OBDMiddleware/communicationInterface/: CMakeLists.txt
(+78 files in other folders)
