MESSAGE(STATUS "Looking for Source files in: ${CMAKE_CURRENT_SOURCE_DIR}/")
FILE(GLOB_RECURSE view_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB_RECURSE view_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(GLOB_RECURSE view_UIS ${CMAKE_CURRENT_SOURCE_DIR}/*.ui)
#FILE(GLOB_RECURSE view_RESOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.qrc)

SET(CMAKE_CXX_FLAGS "-g -Wall -std=c++11")

INCLUDE(${QT_USE_FILE})

QT4_WRAP_UI(UISrcs ${view_UIS})
QT4_WRAP_CPP(MOCSrcs ${view_INCLUDES})
QT4_ADD_RESOURCES(Resources resources.qrc)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} "${CMAKE_CURRENT_SOURCE_DIR}/res/")

ADD_LIBRARY(View STATIC  ${view_SOURCES} ${MOCSrcs} ${UISrcs} ${Resources})

TARGET_LINK_LIBRARIES(View
   ${QT_LIBRARIES}
)
#set_target_properties(library PROPERTIES
#     LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})